# VirtualMeter

./: .gitignore  README.md
.github/workflows/: build.yml
Devices/basic/Inc/: cpu.h  delay.h  jiffy.h  power.h
Devices/basic/Src/: cpu.c  delay.c  jiffy.c  power.c
Devices/battery/Inc/: battery.h
Devices/battery/Src/: battery.c
Devices/buses/Inc/: viic1.h  viic2.h  vuart1.h  vuart3.h
Devices/buses/Src/: viic1.c  viic2.c  viic3.c  vspi1.c  vspi2.c  vuart1.c  vuart2.c  vuart3.c  vuart4.c
Devices/buzzer/Inc/: buzzer.h
Devices/buzzer/Src/: buzzer.c
Devices/common/Inc/: comm_socket.h  device.h  device_lowlevel.h
Devices/common/Src/: comm_socket.c
Devices/eeprom/Inc/: eeprom.h  eeprom_1.h  eeprom_2.h  viic.h
Devices/eeprom/Src/: eeprom.c  eeprom_1.c  eeprom_2.c  viic.c  viic2.c
Devices/flash/Inc/: flash.h  spi2.h  vspi2.h
Devices/flash/Src/: flash.c  spi2.c  vspi2.c
Devices/keys/Inc/: keys.h
Devices/keys/Src/: keys.c
Devices/lcd/Inc/: lcd.h  viic3.h
Devices/lcd/Src/: lcd.c  viic3.c
Devices/leds/Inc/: leds.h
Devices/leds/Src/: leds.c
Devices/metering/Inc/: meter.h  spi1.h  vspi1.h
Devices/metering/Src/: meter.c  spi1.c
Devices/relay/Inc/: relay.h
Devices/relay/Src/: relay.c
Devices/rtc/Inc/: rtc.h
Devices/rtc/Src/: clock.c  getzone.c  rtc.c  time.c  time64.c  viic1.c
Devices/sensor/Inc/: button.h  magnetic.h
Devices/sensor/Src/: button.c  magnetic.c
Devices/serial/Inc/: console.h  module.h  optical.h  rs485_1.h  rs485_2.h  uart1.h  uart2.h  uart3.h  uart4.h  vuart2.h  vuart4.h
Devices/serial/Src/: console.c  module.c  optical.c  rs485_1.c  rs485_2.c  uart1.c  uart2.c  uart3.c  uart4.c  vuart1.c  vuart2.c  vuart3.c  vuart4.c
Docs/: 00_naming_convention.txt  00_planning.txt  00_readme.txt  Templates_of_Tasks.7z  cosem  metering.txt  mid_fatfs.txt  mid_lzo.txt  mid_mxml.txt  resource_management.txt  test_disk.c_suit_1.lua  test_disk.c_suit_2.lua  test_disk.c_suit_3.lua  软件流程图.vsd
Kernel/Inc/: allocator.h  allocator_ctrl.h  kernel.h  twigs.h  vm_basis.h
Kernel/Src/: disk.c  heap.c  kernel.c  nvram.c  twigs.c  vm_basis.c
Libraries/Check/Inc/: crc.h  ecc.h
Libraries/Check/Src/: crc.c  ecc.c
Libraries/Convert/Inc/: axdr.h  bcd.h  mids.h
Libraries/Convert/Src/: axdr.c  bcd.c  mids.c
Libraries/Info/Inc/: info.h
Libraries/Info/Src/: info.c
Libraries/Lua/Inc/: lauxlib.h  lualib.h
Libraries/Lua/Src/: lauxlib.c  linit.c  liptlib.c  loslib.c  lpwrlib.c
Libraries/Mbed/littlefs/Inc/: lfs.h  lfs_util.h
Libraries/Mbed/littlefs/Src/: lfs.c
Libraries/Mbed/tls/mbedtls/: config.h
Libraries/STM32F0xx/Interrupts/Inc/: stm32f0xx_it.h
Libraries/STM32F0xx/Interrupts/Src/: stm32f0xx_it.c
Libraries/STM32F0xx/cmsis/Src/: startup_stm32f091.s
Libraries/trace/Inc/: trace.h
Libraries/trace/Src/: trace.c
Project/CMAKE/: CMakeLists.txt  STM32F0.cmake  STM32F0.ld  help.txt
Project/DEV_C_WIN32/: Makefile.win  WIN32.dev  WIN32.layout  WIN32_private.h  WIN32_private.rc
Project/GCC_LINUX/: Makefile
Project/IAR_STM32_F091/: STM32F0.dep  STM32F0.ewd  STM32F0.ewp  STM32F0.ewt  STM32F0.eww  stm32f091xC.icf
Project/IAR_STM32_F091/settings/: STM32F0.Debug.cspy.bat  STM32F0.Debug.driver.xcl  STM32F0.Debug.general.xcl  STM32F0.dbgdt  STM32F0.dni  STM32F0.wsdt  STM32F0.wspos  STM32F0_EncodingOverride.xml
Project/VS_C_WIN32/: VS_C_WIN32.sln
Project/VS_C_WIN32/WIN32/: WIN32.vcxproj  WIN32.vcxproj.filters
Tasks/Calendar/Inc/: config_calendar.h  task_calendar.h  types_calendar.h  vm_calendar.h
Tasks/Calendar/Src/: task_calendar.c  vm_calendar.c
Tasks/Comm/Inc/: config_comm.h  task_comm.h  types_comm.h  vm_comm.h
Tasks/Comm/Src/: task_comm.c  vm_comm.c
Tasks/Console/Inc/: config_console.h  task_console.h  types_console.h
Tasks/Console/Src/: task_console.c
Tasks/Disconnect/Inc/: config_disconnect.h  task_disconnect.h  types_disconnect.h  vm_disconnect.h
Tasks/Disconnect/Src/: task_disconnect.c  vm_disconnect.c
Tasks/Display/Inc/: config_display.h  task_display.h  types_display.h  vm_display.h
Tasks/Display/Src/: task_display.c  vm_display.c
Tasks/Keyboard/Inc/: config_keyboard.h  task_keyboard.h  types_keyboard.h  vm_keyboard.h
Tasks/Keyboard/Src/: task_keyboard.c  vm_keyboard.c
Tasks/Logger/Inc/: config_logger.h  task_logger.h  types_logger.h  vm_logger.h
Tasks/Logger/Src/: task_logger.c  vm_logger.c
Tasks/Metering/Inc/: config_metering.h  task_metering.h  types_metering.h  vm_metering.h
Tasks/Metering/Src/: task_metering.c  vm_metering.c
Tasks/Protocols/Core/Inc/: config_protocol.h  object_template.h  task_protocol.h  types_protocol.h  vm_protocol.h
Tasks/Protocols/Core/Src/: task_protocol.c  vm_protocol.c
Tasks/Protocols/proto_atcmd/Inc/: proto_atcmd.h
Tasks/Protocols/proto_atcmd/Src/: proto_atcmd.c
Tasks/Protocols/proto_dlms/Inc/: cosem_objects.h  cosem_objects_association.h  cosem_objects_clock.h  cosem_objects_data.h  cosem_objects_exception.h  cosem_objects_extendedregister.h  cosem_objects_hdlc_setup.h  cosem_objects_imagetransfer.h  cosem_objects_register.h  cosem_objects_security_setup.h  dlms_application.h  dlms_association.h  dlms_lexicon.h  dlms_types.h  dlms_utilities.h  hdlc_datalink.h  proto_dlms.h
Tasks/Protocols/proto_dlms/Src/: cosem_objects.c  cosem_objects_association.c  cosem_objects_clock.c  cosem_objects_data.c  cosem_objects_exception.c  cosem_objects_extendedregister.c  cosem_objects_hdlc_setup.c  cosem_objects_imagetransfer.c  cosem_objects_register.c  cosem_objects_security_setup.c  dlms_application.c  dlms_association.c  dlms_lexicon.c  dlms_utilities.c  hdlc_datalink.c  proto_dlms.c
Tasks/Protocols/proto_xmodem/Inc/: proto_xmodem.h
Tasks/Protocols/proto_xmodem/Src/: proto_xmodem.c
Tasks/Tasks/Inc/: api.h  callback.h  system.h  tasks.h  tasks_sched.h
Tasks/Tasks/Src/: tasks.c
Tasks/Timed/Inc/: config_timed.h  task_timed.h  types_timed.h  vm_timed.h
Tasks/Timed/Src/: task_timed.c  vm_timed.c
Tasks/Utilities/Inc/: config_xmodem.h  task_xmodem.h  types_xmodem.h  vm_xmodem.h
Tasks/Utilities/Src/: task_xmodem.c  vm_xmodem.c
(+5 files in other folders)
